test/invalid/baseline/callback-noreturn.txt
Syntax error at line 1 in callback-noreturn.widl, since `callback MyCall`:
callback MyCall = ;
                  ^ Callback lacks a return type
